[gd_scene load_steps=5 format=3 uid="uid://t7jr01ydfhjn"]

[ext_resource type="Script" uid="uid://dknvyvbn8xhry" path="res://UI/healthbar.gd" id="1_6xagt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7timn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7timn"]
bg_color = Color(0.90684694, 0, 0.28005856, 1)
border_color = Color(0.842094, 0.0005598569, 0.84208816, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udao7"]
bg_color = Color(1, 1, 1, 1)

[node name="enemy_healthbar" type="ProgressBar"]
z_index = 1
offset_right = 250.0
offset_bottom = 10.0
theme_override_styles/background = SubResource("StyleBoxEmpty_7timn")
theme_override_styles/fill = SubResource("StyleBoxFlat_7timn")
value = 50.0
show_percentage = false
script = ExtResource("1_6xagt")

[node name="damage_bar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_udao7")
value = 80.0
show_percentage = false

[node name="damage_bar_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="damage_bar_timer" to="." method="_on_damage_bar_timer_timeout"]
