extends ProgressBar

@onready var timer_for_damagebar = $damage_bar_timer
@onready var damage_bar = $damage_bar

var health = 0 : set = _set_health

func _set_health(new_health):
	var prev_health = health
	health = min(max_value, new_health)
	value = health
	
	if health <= 0:
		queue_free()
	
	if health < prev_health:
		timer_for_damagebar.start()
		var tw = create_tween()
		tw.tween_property(damage_bar, "value", health, 1.2).set_trans(Tween.TRANS_QUAD).set_ease(Tween.EASE_OUT)
	else:
		damage_bar.value = health

func init_health(_health):
	health = _health
	max_value = health
	value = health
	damage_bar.max_value = health
	damage_bar.value = health


func _on_damage_bar_timer_timeout() -> void:
	damage_bar.value = health
